--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,7 @@ add_executable(raytracer raytracer.cc
         window.h)
 target_include_directories(raytracer PUBLIC geometry)
 target_link_libraries(raytracer ${SDL2_LIBRARIES})
-add_executable(playground playground.cpp)
+add_executable(playground playground.cpp
+        vec3.h
+        color.h
+        ray.h)
